--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ ul.task-list li input[type="checkbox"] {
       <div>
       <div class="quarto-title-meta-heading">Published</div>
       <div class="quarto-title-meta-contents">
-        <p class="date">Jan 6, 2026 11:14 am</p>
+        <p class="date">Feb 10, 2026 04:06 pm</p>
       </div>
     </div>
     
@@ -366,7 +366,7 @@ ul.task-list li input[type="checkbox"] {
 
 <section id="preface" class="level1 unnumbered">
 <h1 class="unnumbered">Preface</h1>
-<p>Here find an introduction to regularization using one of the primary languages of data science: R.</p>
+<p>Here find an introduction to data analysis using one of the primary languages of data science: R.</p>
 <p>The written material shows you how to use R The videos show R running the instructions presented in the written material.</p>
 
 
