--- a/04-MoreStuff.html
+++ b/04-MoreStuff.html
@@ -281,7 +281,7 @@ ul.task-list li input[type="checkbox"] {
       <div>
       <div class="quarto-title-meta-heading">Published</div>
       <div class="quarto-title-meta-contents">
-        <p class="date">Jan 9, 2026 09:47 pm</p>
+        <p class="date">Feb 10, 2026 04:06 pm</p>
       </div>
     </div>
     
@@ -448,7 +448,7 @@ Figure&nbsp;4.3: Available vignettes for using lessR.
 </div>
 </div>
 </div>
-<p>Alternatively, as previously indicated, access the R manual for a function by entering a <em>?</em> followed by the function name.</p>
+<p>Alternatively, as previously indicated, access the R manual for a function by entering a <em>?</em> followed by the function name. Access the full <code>lessR</code> <a href="https://cran.r-project.org/web/packages/lessR/refman/lessR.html">manual</a> as a website.</p>
 </section>
 <section id="comments" class="level3" data-number="4.2.2">
 <h3 data-number="4.2.2" class="anchored" data-anchor-id="comments"><span class="header-section-number">4.2.2</span> Comments</h3>
